tests/baselines/reference/propertyAccessOnTypeParameterWithConstraints4.errors.txt
tests/cases/conformance/types/typeParameters/typeParameterLists/propertyAccessOnTypeParameterWithConstraints4.ts(5,22): error TS2339: Property 'notHere' does not exist on type 'T'.
tests/cases/conformance/types/typeParameters/typeParameterLists/propertyAccessOnTypeParameterWithConstraints4.ts(15,16): error TS2339: Property 'notHere' does not exist on type 'Date'.
tests/cases/conformance/types/typeParameters/typeParameterLists/propertyAccessOnTypeParameterWithConstraints4.ts(21,22): error TS2339: Property 'notHere' does not exist on type 'Date'.
tests/cases/conformance/types/typeParameters/typeParameterLists/propertyAccessOnTypeParameterWithConstraints4.ts(27,22): error TS2339: Property 'notHere' does not exist on type 'T'.


==== tests/cases/conformance/types/typeParameters/typeParameterLists/propertyAccessOnTypeParameterWithConstraints4.ts (4 errors) ====
    class C<T extends Date> {
        f() {
            var x: T;
            var a = x['notHere'](); // should be string
            return a + x.notHere();
                         ~~~~~~~
!!! error TS2339: Property 'notHere' does not exist on type 'T'.
        }
    }
    
    var r = (new C<Date>()).f();
    
    interface I<T extends Date> {
        foo: T;
    }
    var i: I<Date>;
    var r2 = i.foo.notHere();
                   ~~~~~~~
!!! error TS2339: Property 'notHere' does not exist on type 'Date'.
    var r2b = i.foo['notHere']();
    
    var a: {
        <T extends Date>(): T;
    }
    var r3: string = a().notHere();
                         ~~~~~~~
!!! error TS2339: Property 'notHere' does not exist on type 'Date'.
    var r3b: string = a()['notHere']();
    
    var b = {
        foo: <T extends Date>(x: T): T => {
            var a = x['notHere'](); // should be string
            return a + x.notHere();
                         ~~~~~~~
!!! error TS2339: Property 'notHere' does not exist on type 'T'.
        },
        bar: b.foo().notHere()
    }
    
    var r4 = b.foo(new Date());